# pekzep_numeral

./: Cargo.toml
src/: chars_to_num.rs  digit.rs  lib.rs  num_to_chars_preferred.rs  tests.rs
src/num_to_chars_preferred/: tests.rs
